--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "dotenv": "^16.4.5",
+    "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -22,6 +23,7 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.78.0",
     "save": "^2.9.0",
+    "three": "^0.169.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "ws": "^8.18.0"
@@ -54,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/three": "^0.169.0",
     "nodemon": "^3.1.7"
   }
 }
